--- a/bash-reader/AndroidManifest.xml
+++ b/bash-reader/AndroidManifest.xml
@@ -15,7 +15,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".QuoteActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:parentActivityName=".MainActivity">
+            <!-- The meta-data element is needed for versions lower than 4.1 -->
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".MainActivity"/>
+
             <intent-filter>
                 <action android:name="ru.proglive.android1.lesson4.alyoshin.bash_reader.ACTION_SHOW"/>
             </intent-filter>
